# AugmentedReality

./: CMakeLists.txt  MNIST.ipynb  README.txt  calibrate.cpp  calibrate.py  default.xml  opengl_cv.cpp  opengl_cv.py
